--- a/wnpp_debian_net/templates/wnpp_debian_net/debianwnpp_list.html
+++ b/wnpp_debian_net/templates/wnpp_debian_net/debianwnpp_list.html
@@ -13,16 +13,16 @@ Licensed under GNU Affero GPL v3 or later
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <title>Debian Packages that Need Lovin'</title>
-<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-<link rel="manifest" href="/manifest.json">
+<link rel="apple-touch-icon" sizes="57x57" href="{% url 'favicon' path='apple-touch-icon-57x57.png' %}/">
+<link rel="apple-touch-icon" sizes="60x60" href="{% url 'favicon' path='apple-touch-icon-60x60.png' %}">
+<link rel="apple-touch-icon" sizes="72x72" href="{% url 'favicon' path='apple-touch-icon-72x72.png' %}">
+<link rel="apple-touch-icon" sizes="76x76" href="{% url 'favicon' path='apple-touch-icon-76x76.png' %}">
+<link rel="apple-touch-icon" sizes="114x114" href="{% url 'favicon' path='apple-touch-icon-114x114.png' %}">
+<link rel="apple-touch-icon" sizes="120x120" href="{% url 'favicon' path='apple-touch-icon-120x120.png' %}">
+<link rel="icon" type="image/png" href="{% url 'favicon' path='favicon-32x32.png' %}" sizes="32x32">
+<link rel="icon" type="image/png" href="{% url 'favicon' path='favicon-96x96.png' %}" sizes="96x96">
+<link rel="icon" type="image/png" href="{% url 'favicon' path='favicon-16x16.png' %}" sizes="16x16">
+<link rel="manifest" href="{% url 'favicon' path='manifest.json' %}">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 <style>
