--- a/wnpp_debian_net/templates/wnpp_debian_net/debianwnpp_list.html
+++ b/wnpp_debian_net/templates/wnpp_debian_net/debianwnpp_list.html
@@ -28,6 +28,7 @@ Licensed under GNU Affero GPL v3 or later
 <meta name="theme-color" content="#ffffff">
 <style>
     * { font-family: 'Bitstream Vera Sans', 'Verdana', Sans-Serif; }
+    h1 a { color: #000000; text-decoration: none; }
     table.data_table { border:1px solid #C0C0C0; background-color:#C0C0C0; }
     table.form_table { border:2px solid #C0C0C0; background-color:#F8F8F8; }
     th { background-color:#F8F8F8; }
@@ -126,7 +127,7 @@ Licensed under GNU Affero GPL v3 or later
 <table width="100%">
 <tr>
     <td align="center">
-        <h1>Debian Packages that Need Lovin'</h1>
+        <h1><a href="{% url 'front_page' %}">Debian Packages that Need Lovin'</a></h1>
         <form action="" method="get">
         <table cellspacing="1" class="form_table">
         <tr>
