--- a/wnpp_debian_net/templates/wnpp_debian_net/debianwnpp_list.html
+++ b/wnpp_debian_net/templates/wnpp_debian_net/debianwnpp_list.html
@@ -256,7 +256,7 @@ ITA/ITP = <i>Intent to <u>p</u>ackage/<u>a</u>dopt</i> ..... O = <i><u>O</u>rpha
     <td class="{{ issue.kind }}"><nobr><a href="{% wnpp_issue_url issue.ident %}">{{ issue.popcon_id|truncatechars:38 }}</a></nobr></td>
     <td class="{{ issue.kind }}" align="right">&nbsp;<nobr><a href="{% wnpp_issue_url issue.ident %}">{{ issue.ident }}</a></nobr>&nbsp;</td>
     {% if show_description %}
-    <td class="{{ issue.kind }}"><nobr>{{ issue.description|truncatechars:60 }}</nobr></td>
+    <td class="{{ issue.kind }}" title="{{ issue.description }}"><nobr>{{ issue.description|truncatechars:60 }}</nobr></td>
     {% endif %}
     {% if show_users %}
     <td class="{{ issue.kind }}" align="right"><nobr>&nbsp;{{ issue.popcon.vote|default:"0" }}&nbsp;</nobr></td>
