debianwnpp_list.html: Document required variables

--- a/wnpp_debian_net/templates/wnpp_debian_net/debianwnpp_list.html
+++ b/wnpp_debian_net/templates/wnpp_debian_net/debianwnpp_list.html
@@ -1,6 +1,30 @@
 {% comment %}
 Copyright (C) 2021 Sebastian Pipping <sebastian@pipping.org>
 Licensed under GNU Affero GPL v3 or later
+
+Requirement variables:
+- description_filter
+- page_items
+- page_obj
+- project_filter
+- show_age
+- show_description
+- show_dust
+- show_installs
+- show_ita
+- show_itp
+- show_o
+- show_owner
+- show_reporter
+- show_rfa
+- show_rfh
+- show_rfp
+- show_type
+- show_users
+- sort
+- with_owner
+- without_owner
+
 {% endcomment %}
 {% load static %}
 {% load humanize %}
