templates: Document need for context variable "request"

--- a/wnpp_debian_net/templates/wnpp_debian_net/debianwnpp_list.html
+++ b/wnpp_debian_net/templates/wnpp_debian_net/debianwnpp_list.html
@@ -7,6 +7,7 @@ Requirement variables:
 - page_items
 - page_obj
 - project_filter
+- request (for self_url_with_sorting_for)
 - show_age
 - show_description
 - show_dust
