--- a/wnpp_debian_net/templates/pagination.html
+++ b/wnpp_debian_net/templates/pagination.html
@@ -5,6 +5,7 @@ Licensed under GNU Affero GPL v3 or later
 Requirement variables:
 - page_obj
 - page_items
+- request (for url_for_page)
 
 Required CSS classes (a la https://getbootstrap.com/docs/4.0/components/pagination/):
 - active
