favicon: Remake using https://realfavicongenerator.net/

--- a/wnpp_debian_net/templates/wnpp_debian_net/debianwnpp_list.html
+++ b/wnpp_debian_net/templates/wnpp_debian_net/debianwnpp_list.html
@@ -40,17 +40,22 @@ Licensed under GNU Affero GPL v3 or later
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <title>Debian Packages that Need Lovin'</title>
-<link rel="apple-touch-icon" sizes="57x57" href="{% url 'favicon' path='apple-touch-icon-57x57.png' %}/">
+<link rel="apple-touch-icon" sizes="114x114" href="{% url 'favicon' path='apple-touch-icon-114x114.png' %}">
+<link rel="apple-touch-icon" sizes="120x120" href="{% url 'favicon' path='apple-touch-icon-120x120.png' %}">
+<link rel="apple-touch-icon" sizes="144x144" href="{% url 'favicon' path='apple-touch-icon-144x144.png' %}">
+<link rel="apple-touch-icon" sizes="152x152" href="{% url 'favicon' path='apple-touch-icon-152x152.png' %}">
+<link rel="apple-touch-icon" sizes="180x180" href="{% url 'favicon' path='apple-touch-icon-180x180.png' %}">
+<link rel="apple-touch-icon" sizes="57x57" href="{% url 'favicon' path='apple-touch-icon-57x57.png' %}">
 <link rel="apple-touch-icon" sizes="60x60" href="{% url 'favicon' path='apple-touch-icon-60x60.png' %}">
 <link rel="apple-touch-icon" sizes="72x72" href="{% url 'favicon' path='apple-touch-icon-72x72.png' %}">
 <link rel="apple-touch-icon" sizes="76x76" href="{% url 'favicon' path='apple-touch-icon-76x76.png' %}">
-<link rel="apple-touch-icon" sizes="114x114" href="{% url 'favicon' path='apple-touch-icon-114x114.png' %}">
-<link rel="apple-touch-icon" sizes="120x120" href="{% url 'favicon' path='apple-touch-icon-120x120.png' %}">
 <link rel="icon" type="image/png" href="{% url 'favicon' path='favicon-32x32.png' %}" sizes="32x32">
 <link rel="icon" type="image/png" href="{% url 'favicon' path='favicon-96x96.png' %}" sizes="96x96">
 <link rel="icon" type="image/png" href="{% url 'favicon' path='favicon-16x16.png' %}" sizes="16x16">
-<link rel="manifest" href="{% url 'favicon' path='manifest.json' %}">
+<link rel="manifest" href="{% url 'favicon' path='site.webmanifest' %}">
+<link rel="mask-icon" href="{% url 'favicon' path='safari-pinned-tab.svg' %}" color="#ce0058">
 <meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="{% url 'favicon' path='mstile-144x144.png' %}">
 <meta name="theme-color" content="#ffffff">
 <style>
     * { font-family: 'Bitstream Vera Sans', 'Verdana', Sans-Serif; }
